sovereigntyai-temp/services/database/k8s/database-adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: sovereignty-ai-dev
spec:
  selector:
    app: database
  ports:
    - name: adminer-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
