sovereigntyai-temp/services/database/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30000
  type: LoadBalancer
