sovereigntyai-temp/services/database/k8s/database-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminer-route
spec:
  to:
    kind: Service
    name: adminer-service
  port:
    targetPort: 8080
  tls:
    termination: edge
